--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,106 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.spaceBetweened {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hrS {
+  border: 1px solid ghostwhite;
+  background: ghostwhite;
+}
+
+.optionArea {
+  border-bottom: 1px solid paleturquoise;
+  /* width: 200px; */
+  max-height: 200px;
+  overflow-y: auto;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.optionArea:active {
+  background: #0deadf1e;
+}
+
+.selectedOption {
+  background: #0deadf1e;
+}
+
+.mainOptionBody {
+  /* border: 1px solid #80808073; */
+  width: 385px;
+  max-height: 350px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 5px;
+  border-radius: 3px;
+  font-size: small;
+  position: absolute;
+  background: white;
+  box-shadow: 0px 3px 7px 0px #00fff3;
+}
+
+.inputArea {
+  width: 350px;
+  padding: 10px;
+  border-radius: 4px 0 0 4px;
+  border: 1px solid gray;
+  outline: none;
+  -webkit-border-radius: 4px 0 0 4px;
+  -moz-border-radius: 4px 0 0 4px;
+  -ms-border-radius: 4px 0 0 4px;
+  -o-border-radius: 4px 0 0 4px;
+  border-right: 1px solid white;
+}
+
+.inputArea:focus {
+  box-shadow: 0 0 10px 0px #00fff3;
+}
+
+.btnSearch {
+  border: 1px solid gray;
+  background: paleturquoise;
+  border-radius: 0 4px 4px 0;
+  font-size: x-large;
+  padding: 0 10px;
+  color: #5f5454;
+  font-weight: bolder;
+  border-left: 1px solid white;
+  cursor: pointer;
+  outline: none;
+}
+
+.btnSearch:active {
+  background: turquoise
+}
+
+.removeSuggestionBtn {
+  background: paleturquoise;
+  font-size: xx-small;
+  border: 1px solid white;
+  border-radius: 2px;
+  outline: none;
+  cursor: pointer;
+}
+
+.removeSuggestionBtn:active {
+  background: turquoise;
+  font-size: xx-small;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  outline: none;
+}
+
+.showAfterSearch {
+  text-align: center;
+  font-size: smaller;
+  margin: 20px auto;
 }
