--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,20 @@ body {
   cursor: pointer;
 }
 
+.centered{
+text-align: center;
+margin: 25px auto;
+}
+
+.flex{
+  display: flex;
+}
+
+.flexCenterN{
+  display: flex;
+   justify-content: center;
+   margin-top: 30px 
+}
 .optionArea:active {
   background: #0deadf1e;
 }
