minor bug fix related to cdd

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ margin: 25px auto;
 
 .mainOptionBody {
   /* border: 1px solid #80808073; */
-  width: 385px;
+  width: 365px;
   max-height: 350px;
   overflow-y: auto;
   overflow-x: hidden;
@@ -69,7 +69,7 @@ margin: 25px auto;
 }
 
 .inputArea {
-  width: 350px;
+  width: 330px;
   padding: 10px;
   border-radius: 4px 0 0 4px;
   border: 1px solid gray;
@@ -123,4 +123,8 @@ margin: 25px auto;
   text-align: center;
   font-size: smaller;
   margin: 20px auto;
+}
+
+@media screen and (max-width: 1920px) and (min-width: 1600px ){
+
 }
